--- a/src/reservations.css
+++ b/src/reservations.css
@@ -1,4 +1,4 @@
-/* ReservationForm.css */
+
 
 .container {
     display: flex;
@@ -9,6 +9,7 @@
     width: 1000vh;
     background-color: #f4f4f4;
   }
+  
   
   h2 {
     font-size: 2rem;
@@ -33,7 +34,7 @@
     color: #333;
   }
   
-  input {
+  input, select {
     width: 100%;
     padding: 0.5rem;
     margin-bottom: 1rem;
@@ -41,8 +42,7 @@
     border-radius: 4px;
   }
   
-  input[type="date"] {
-  }
+
   
   button {
     background-color: #ff5722;
